--- a/DPIConverter.Tests/DPIConverter.Tests.csproj
+++ b/DPIConverter.Tests/DPIConverter.Tests.csproj
@@ -82,6 +82,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="LandXmlTests.cs" />
     <Compile Include="InputFileFactoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
