--- a/DPIConverter.Tests/DPIConverter.Tests.csproj
+++ b/DPIConverter.Tests/DPIConverter.Tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="LandXmlTests.cs" />
     <Compile Include="InputFileFactoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
